glide: Ignore sub packages

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,1 +1,8 @@
 package: github.com/limetext/backend
+ignore:
+  - github.com/limetext/backend/clipboard
+  - github.com/limetext/backend/keys
+  - github.com/limetext/backend/log
+  - github.com/limetext/backend/packages
+  - github.com/limetext/backend/parser
+  - github.com/limetext/backend/watch
